--- a/public/views/partials/navbar.ejs
+++ b/public/views/partials/navbar.ejs
@@ -6,6 +6,13 @@
             <a href="/solutions/projects" class="text-white text-lg hover:text-gray-400 <%= page === 'projects' ? 'font-bold' : '' %>">Projects</a>
             <a href="/solutions/addProject" class="text-white text-lg hover:text-gray-400">Add New Project</a> <!-- Added link here -->
             <a href="/about" class="text-white text-lg hover:text-gray-400 <%= page === 'about' ? 'font-bold' : '' %>">About Me</a>
+            
+            <% if (session.user) { %> <!-- Check if user is logged in -->
+                <a href="/logout" class="text-white text-lg hover:text-gray-400 ml-4">Logout</a>
+            <% } else { %> <!-- If not logged in, show Login and Register links -->
+                <a href="/login" class="text-white text-lg hover:text-gray-400 ml-4">Login</a>
+                <a href="/register" class="text-white text-lg hover:text-gray-400 ml-4">Register</a>
+            <% } %>
         </div>
     </div>
 </nav>
